StringView::startsWith and String::startsWith do not treat null strings the same https://bugs.webkit.org/show_bug.cgi?id=209273

Reviewed by Darin Adler.

Source/WTF:

Align StringImpl with StringView and make startsWith return true if prefix is null.

* wtf/text/StringImpl.cpp:
(WTF::StringImpl::startsWith const):

Tools:

* TestWebKitAPI/Tests/WTF/StringView.cpp:
(TestWebKitAPI::TEST):
* TestWebKitAPI/Tests/WTF/WTFString.cpp:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/222333@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258828 268f45cc-cd09-0410-ab3c-d52691b4dbfc